--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -638,10 +638,7 @@
       hashtag: phuketplazhchustii
       ldjson: yes
       answer: |
-        Как известно, самые чистые участки береговой линии находятся возле отелей. Панси, к примеру, — целый пляж при отеле, за чистотой которого неустанно следит администрация. ... 
-        Пляж Ката Пляж Ката также считается одним из самых чистых, на берегу есть несколько крупных отелей. ... 
-        Пляж Банг Тао ... 
-        Пляж Найтон
+        Пляж Карон-Бич — самый красивый и самый чистый на Пхукете, находится на западном побережье острова, южнее Патонга и севернее пляжа Ката-Бич.
         ![Фото](https://phuketfaq.ru/assets/images/chistiyplazj.jpeg)
     - question: На каком пляже белый песок на пхукете?
       hashtag: phuketplazhpesok
