--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -633,7 +633,13 @@
       hashtag: phuketnudist
       ldjson: yes
       answer: |
-        К сожалению, эта часть нудистского отдыха невозможна даже на уединенных пляжах Пхукета. Так как у туристов нет возможности посетить официальный нудистский пляж в Таиланде, здесь образовалось общество нудистов, которое нашло способ не нарушать закон и отдыхать по своему усмотрению.
+        
+        Пхукет - Идеальное место для любителей отдыха в обнаженном виде.
+        
+        Первый "Официальный" в округе нудистский курорт Lemon Tree Resort.
+        Там можно провести пол дня на пляже Нуи Бич и позагорать в обнаженном виде.
+        На самой южной оконечности Пхукета, как доберётесь до пляжа Нуи - красивая частная бухта, где вы можете сбросить всю своё одежду.
+        Так же есть Май Као Бич,Большой Будда Бич (не считается нудистским, но вы можете увидеть много гуляющих и плавающих в обнаженном виде.
     - question: Какие самые чистые пляжи пхукета?
       hashtag: phuketplazhchustii
       ldjson: yes
