--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -288,6 +288,13 @@
 - question: Транспорт
   hashtag: transport
   items:
+    - question: Русское такси на пхукете.
+      hashtag: taksiphucetrus
+      ldjson: yes
+      answer: |
+        
+        Есть на Пхукете и русское такси «Тройка». Служба работает уже в течение 5 лет и отлично зарекомендовала себя. Компания устраивает автотуры по острову, заранее рассчитывается стоимость проезда. Связаться с ней можно по телефону +66 94 580 03 33 или через WhatsApp, Viber.
+    
     - question: Такси на пхукете.
       hashtag: taksiphucet
       ldjson: yes
