--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -855,3 +855,22 @@
        * Если же вы хотите обучать ребенка по российской программе, то в Таиланде существуют русские школы. В них преподают российские учителя. Стоимость обучения в русской школе составляет от 12 000 бат в месяц и выше. По окончанию обучения ученик получит аттестат российского образца.
 
          На Пхукете открыты школы Phuket International Kindergarden & School и «Спектр». Школа Phuket International Kindergarden & School обучает по сингапурской программе, но можно посещать уроки русского языка. В этой школе учатся дети из разных стран. В школе «Спектр» классы состоят только из русскоговорящих детей, обучаются по российской программе и в конце обучения ученики получат российский аттестат.  
+- question: Сервисы
+  hashtag: servise
+  items:
+    - question: Где на пхукете найти компьютерный сервис? Починить/почистить ноутбук…
+      hashtag: servisepk
+      ldjson: yes
+      answer: |
+        Компьютерный сервис-центр «ProComp» специализируется на послегарантийном обслуживании компьютерной, цифровой и офисной техники.
+
+        Мы осуществляем широкий спектр сервисных услуг по диагностике и ремонту, восстановлению данных, чистке от вирусов, установке и настройке ПО, модернизации оборудования, подключению к сети Интернет и других услугах.
+
+        Обращаясь в компьютерный сервис ProComp, вы получаете чёткую уверенность в будущем -  гарантия защищает вас от трат на повторный ремонт. В случае, если неполадка повторится, специалисты компьютерного центра решат проблему бесплатно.
+        Таиланд Пхукет 09-4578-8124
+        
+        http://vk.com/procomp_th
+        
+        с 10:00 - 19:00 без выходных
+        
+        procom.th@gmail.com
