--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -2,6 +2,24 @@
 - question: Отдых и Развлечения
   hashtag: Recreationandentertainment
   items:
+    - question: Где поплавать на лодке на пхукете? 
+      hashtag: slony
+      ldjson: yes
+      answer: |
+       
+       Путешествие вокруг Пхукета лодкой
+
+       Водный транспорт позволяет увидеть укромные уголки, сокрытые от большинства туристов. Сняв лодку на Пхукете, отдыхающие получают уникальную возможность посетить
+
+       Пхи-Пхи. Эти острова называют близнецами. Именно здесь снимали фильм «Пляж». Известковые скалы, девственная природа, невероятно чистый песок вдоль береговой линии не оставят равнодушным никого.
+
+       Пханг-Нга. В заливе расположен одноименный парк, но сюда приезжают по другой причине. Большинство желают посетить остров Джеймса Бонда, увидеть деревушку, построенную на сваях.
+       
+       Рача Яй. Кристально чистая вода, коралловые рифы, тихие мелководные бухты сделали остров идеальным местом для снорклинга и дайвинга. Это одно из лучших мест, куда стоит приехать с детьми.
+       Краби. Посещение провинции становится для многих главной причиной для снятия лодки на Пхукете, ведь здесь находится множество невероятно красивых островов, а подводный мир отличается невероятным разнообразием.
+       Симиланские острова. В 65 километрах от Пхукета расположили 11 остров, на которых никто не живет. Сохраненная аутентичная природа привлекает сюда дайверов со всего мира.
+
+За один день объездить абсолютно все не получится, но благодаря тому, что аренда лодки имеет доступную стоимость, путешествовать вокруг Пхукета можно несколько дней.
     - question: Где можно покататься на слонах на пхукете? 
       hashtag: slony
       ldjson: yes
