--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -409,16 +409,14 @@
       ldjson: yes
       answer: |
           
-          Продление делается в 2 захода
+          Ковидные штампы продлили до 24 мая 2022. Затем либо еще продлят эту возможность, либо отменят совсем, пока никто не знает. Продлевать можно за 30 дней до истечения визы. Продление ставят с даты окончания визы, а не со дня обращения.
 
-          На первом этапе заполняем анкеты и платим 1900 бат с человека (2 этаж здания, очередь в окно Information). Проверяют документы и выдают номерок. Когда его объявят, сдаете доки, вас фоткают на телефон. Вы оставляете паспорт и на следующий день забираете.
-          Забирать паспорт в здании офиса на 2 этаже в окне 2 без очереди. Отдаете номерок и получаете паспорт со штампом продления на 60 дней.
+          Условия для россиян - продление на 60 дней возможно сразу после прилета по 30-дневному штампу. Если у вас туристическая виза, то сначала продление визы TR на 30 дней, затем ковид-штамп на 60 дней (30+60 дней)
           
-          Документы для продления штампа на 60 дней
+          Условия для украинцев - сначала продление на 30 дней, если прилетели по штампу, затем ковид виза на 60 дней. Если виза TR, то сначала продляете ее на месяц, затем ковидное продление (30+30+60 дней)
           
-          Паспорт и копии разворот + страница с текущим штампом и бумажкой в паспорте ТМ6 (departure card)
-          Фото на документы (1 шт, размер любой)
-          Деньги 1900 бат наличными (сдачу дают если что)
+          Условия для белорусов - сначала продление визы TR на 30 дней, затем ковидный штамп на 60 дней (60+30+60 дней)
+          
           Могут спросить ТМ30- она же регистрация, и его обязан сделать отель или арендодатель. 
     - question: Где я могу найти отели Sha?
       hashtag: sha
