--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -508,6 +508,28 @@
 - question: Дети
   hashtag: children
   items:
+    - question: Какой выбрать отель на пхукете с детьми?
+      hashtag: chdhphuketotel
+      ldjson: yes
+      answer: |
+       
+       1. Splash Beach Resort - Этот отель находится почти на самом севере острова Пхукет на пляже Май Као или пляже с самолетами, всего в нескольких километрах от аэропорта. Отель имеет большую территорию с номерами разной категории: есть стандартные номера, номера с одной или двумя спальнями и кухней, виллы. А самое главное — на территории отеля расположен аквапарк с горками для детей и взрослых. Важно! сейчас вход в аквапарк не включен в стоимость номера, только если не бронировать по какой-то определенной акции.
+       Кроме того на территории отеля несколько бассейнов, один из них панорамный бассейн с видом на море и закат. Рядом с морем симпатичный бар, где раньше проходила анимация. Сейчас бар закрыт, анимации нет.
+       Отдельно стоит выделить пляж: отель находится на первой линии, пляж широкий с чистым крупным песком и довольно плавным заходом в воду. Пляж Май Као растянулся на несколько километров на север от аэропорта и почти всегда малолюдный. Если вы ищите отели Пхукета с аквапарком для детей, то отель Splash Beach Resort неплохой выбор.
+       
+       2. Naithonburi Beach Resort - Отель Найтонбури бич резорт на тихом, спокойном пляже Найтон  уже давно облюбовали русские семьи с детьми и не напрасно! Отличный пляж, один из самых лучших на острове (правда через дорогу от отеля, но там очень лайтовое движение, машин почти нет).
+       Несколько бассейнов, один из которых является фишкой этого отеля — бассейн с песком и плавным заходом в воду, просторные номера, большая территория, по которой можно кататься на бесплатных велосипедах, комната с игровыми автоматами. А самое главное — цена! Цены на номера в отеле Naithonburi Beach Resort очень приятные.
+       
+       3. Angsana Laguna Phuket - Отель занимает огромную территорию, есть свой участок пляжа с лежаками. В отеле помимо стандартных номеров есть номера прямо с выходом к бассейну, номера с одной и двумя спальнями, гостиной и кухней. Для детей на территории открытая детская площадка, детская комната, детский клуб.
+       
+       4. Dusit Thani Laguna Phuket - Еще один хороший отель для отдыха с детьми на Пхукете в Лагуне на пляже Банг Тао. Огромная территория, много тени, бассейн, есть маленькая горка для детей, детская комната (ну так себе), детская площадка на улице. Шикарный пляж с лежаками в тени деревьев.
+       
+       5. SAii Laguna Phuket - Отель на территории Лагуны. Красивая и очень ухоженная территория, бассейны, (один прям рядом с пляжем, что очень удобно с детьми), горка для детей, детская комната. Чистый пляж с лежаками. За дополнительную стоимость предоставляются услуги няни. Очень вкусные завтраки и еда в ресторане. Шикарное обслуживание. Можно приехать на дей пасс.
+       
+       6. Novotel Phuket Surin Beach Resort - Находится на пляже Сурин, точнее сказать в 200 метрах через дорожку от шикарного пляжа. Несмотря на то, что этот отель не на первой линии, я смело могу его рекомендовать для отдыха с детьми на Пхукете. На зеленой территории расположено несколько корпусов, бассейны, горки, детская комната, игровые автоматы. Есть свой кинозал, где показывают мультфильмы и детские передачи.
+
+       А самое главное – в отеле шикарная анимация. Пока родители отдыхают, дети будут заняты с аниматорами игры, развивающие программы, пенные вечеринки в бассейне – все это в Novotel Phuket Surin. Кстати, отель признан одним из лучших отелей Таиланда для семейного отдыха и отдыха с детьми.
+    
     - question: Отдых с ребёнком?
       hashtag: chdhphuket
       ldjson: yes
