--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -913,7 +913,7 @@
        Русское кафе «Алтай» на пляже Ката — доставка есть по всему острову. Досточно большое меню с русскими и тайскими блюдами. 
        
        [Алтай Сайт](https://foodmenu.online/Altai)
-       VERANDA - Вкусно, доступно, как русская кухня так и тайская. Можно сделать заказ через Facebook.
+       VERANDA - Вкусно, доступно, как русская кухня так и тайская. Можно сделать заказ через  [Instagram](https://www.instagram.com/verandaphuket)
 - question: Школа
   hashtag: shkola
   items:
