--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -934,7 +934,7 @@
       answer: |
         Компьютерный сервис-центр «ProComp» специализируется на послегарантийном обслуживании компьютерной, цифровой и офисной техники.
 
-        Мы осуществляем широкий спектр сервисных услуг по диагностике и ремонту, восстановлению данных, чистке от вирусов, установке и настройке ПО, модернизации оборудования, подключению к сети Интернет и других услугах.
+        Они осуществляют широкий спектр сервисных услуг по диагностике и ремонту, восстановлению данных, чистке от вирусов, установке и настройке ПО, модернизации оборудования, подключению к сети Интернет и других услугах.
 
         Обращаясь в компьютерный сервис ProComp, вы получаете чёткую уверенность в будущем -  гарантия защищает вас от трат на повторный ремонт. В случае, если неполадка повторится, специалисты компьютерного центра решат проблему бесплатно.
         Таиланд Пхукет 09-4578-8124
