--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -475,6 +475,11 @@
       answer: |
        
        Туристы могут ввозить свои дроны в Таиланд. Однако им не разрешается запускать дроны до тех пор, пока те не будут зарегистрированы в базе NBTC или в Управлении гражданской авиации (CAAT).
+       В законодательстве Королевства сказано четко и понятно - с 11 октября 2017 г. в Таиланде запрещена эксплуатация радиоуправляемых летательных аппаратов. Но с небольшой пометкой - без соответствующей регистрации. В соответствии с приказом Национальной комиссии по телерадиовещанию и телекоммуникациям Таиланда собственники радиоуправляемых летательных аппаратов (квадрокоптеров) должны в срок до 90 дней поставить их на учёт. Сделать это можно в центральном офисе комиссии, в региональных представительствах, управлении гражданской авиации или в любом полицейском участке страны. Для этого потребуется предоставить ряд документов, среди которых копия удостоверения личности, фотографии самого аппарата, также потребуется заполнить порядка 8 анкет.
+
+       С января 2022 г. эксплуатация незарегистрированных дронов квалифицируется как нарушение Закона «О радиосвязи», и нарушителей ждет штраф в размере до 100 000 бат и (или) лишение свободы на срок до 5 лет. Также для ввоза квадрокоптера в страну необходимо получить соответствующее разрешение. Провезти коптер по территории Таиланда не вынимая его из фирменной упаковки можно и без разрешения!
+
+       Для туриста вся эта процедура особо затруднительна, особенно если отпуск всего две недели. Стоит ли оно того? На острове разрешения не проверяют (вероятно, пока не случится неприятность), и всегда можно рискнуть и “полетать”. Сложности могут ожидать вас на границе, когда вы решите ввезти квадрокоптер без разрешения. Но если вы везёте его в упаковке и не собираетесь пользоваться - вопросов у таможенников не будет!
     
     - question: Нужны ли права на пхукете для езды на байке?
       hashtag: pravanaupravlenie
