--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -969,16 +969,16 @@
        Рассмотрим самые известные салоны на Пхукете.
 
        Golden Needle — студия расположилась в Пхукет-тауне, около входа в парк Рамы IX. Ее двери открыты с 12.30 до 21.30. Владелец салона Чарт Хемтонг имеет 20-летний опыт в татуаже. Тату набивают специальными электронными машинками, которые считаются одними из лучших в области гигиены.
-       @Ink Tattoo – салон расположен на улице Сурин Сой, около входа в супермаркет Теско Лотус. Желающие сделать тату могут приходить каждый день с 11 утра до 22 часов вечера. Его владельцы Мит и Каи работают со всеми стилями тату, в том числе набивают известную татуировку Сан Янт. Татуировки наносятся с помощью электрических машинок.
+       Ink Tattoo – салон расположен на улице Сурин Сой, около входа в супермаркет Теско Лотус. Желающие сделать тату могут приходить каждый день с 11 утра до 22 часов вечера. Его владельцы Мит и Каи работают со всеми стилями тату, в том числе набивают известную татуировку Сан Янт. Татуировки наносятся с помощью электрических машинок.
        Небольшой салон Tattoo Aussine работает на Патонге около входа в отель Holiday Inn Phuket. Посетить его можно с 10 утра до 10 вечера. Над татуировками работают 5 мастеров. Здесь можно сделать тату по индивидуальному дизайну, также и по картинке, принесенной с собой. Салон начал функционировать в 2008 году, мастера делают тату в разных стилях, в том числе в японском и культском.
-       Old Man Tattoos — салон известен качеством тату и высоким уровнем гигиены. Он функционирует с 1999 года, что делает его одним из самых старых на острове. Мастер салона Джон работает над тату в восточно-японском стиле, используя черный и серый оттенки. Салон расположен в Пхукет-Тауне, работает с 10.30 до 22:30.
+       Old Man Tattoos — салон известен качеством тату и высоким уровнем гигиены. Он функционирует с 1999 года, что делает его одним из самых старых на острове. Мастер салона Джон работает над тату в восточно-японском стиле, используя черный и серый оттенки. Салон расположен в Пхукет-Тауне, работает с 10.30 до 22.30.
        Студию Siam Ink можно найти на Патонге, около входа в гостиницу Paradise. Ее двери открылись в 2008 году, сегодня над созданиями шедевров трудится 4 мастера. Тату делают современными машинами или палочками из бамбука. Здесь создают поистине впечатляющие татуировки. Можно сделать в индивидуальном стиле или же принести готовый шаблон с изображением. Время работы с 12.00 до полуночи.
        Patong Tattoo — один из популярных салонов, так как расположен на пляже Патонг. Студия открылась в 2002 году, над татуировками работают два брата. Они могут создать абсолютно любой дизайн. Татуировки наносятся на электрических машинках, либо же с помощью бамбуковых палочек. Салон работает с понедельника по субботу с 10.30 до 8 вечера.
        ### Цены
        Цены на татуировки самые различные. Самое простое тату в черном цвете обойдется в 1000 бат. В некоторых салонах час работы начинается от 3 000 бат. Чем больше изображение, тем выше стоимость. Нередко бывают случаи, когда цена татуировки размером с рукав достигает 60 000 бат.
 
        Также на острове можно найти много частных русских мастеров, чьи анкеты и работы можно найти через соц сети и сарафанное радио. Так же много объявлений и рекомендаций можно найти в группах телеграмм по Таиланду и Пхукеты в частности.
-    - question: Где на пхукете найти компьютерный сервис? Починить/почистить ноутбук…
+    - question: Где на пхукете найти компьютерный сервис? Починить/почистить ноутбук
       hashtag: servisepk
       ldjson: yes
       answer: |
